letra dos arquivos

--- a/Produtos.html
+++ b/Produtos.html
@@ -198,7 +198,7 @@
                         <div class="col">
                             <div class="card shadow-sm">
                                 <a href="AbuDabi.html">
-                                    <img class="bd-placeholder-img card-img-top"  src="img/produto/Dubai_Abu_Dhabi.jpg" />
+                                    <img class="bd-placeholder-img card-img-top"  src="img/produto/Dubai_abu_Dhabi.jpg" />
                                 </a>
                                 <div class="card-body">
                                     <p class="card-text">Venha conhecer o deserto: Mistério, magia e muita diversão!</p>
@@ -218,7 +218,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img class="bd-placeholder-img card-img-top"  src="img/produto/california.jpg" />
+                                <img class="bd-placeholder-img card-img-top"  src="img/produto/California.jpg" />
 
                                 <div class="card-body">
                                     <p class="card-text">Embarque com a gente pela costa oeste dos Estados Unidos!</p>
@@ -237,7 +237,7 @@
 
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img class="bd-placeholder-img card-img-top" src="img/produto/orlando.jpg" />
+                                <img class="bd-placeholder-img card-img-top" src="img/produto/Orlando.jpg" />
 
                                 <div class="card-body">
                                     <p class="card-text">Chegou a hora de realizar seu sonho! Teen Julho de 2024</p>
