troca das letras das img

--- a/Disney.html
+++ b/Disney.html
@@ -208,7 +208,7 @@
                     <p class="lead">Seja a magia que você quer ver no mundo.</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="img/novo/orlando.jpg" alt="Orlando" />
+                    <img src="img/Novo/Orlando.jpg" alt="Orlando" />
                 </div>
             </div>
             <a href="index.html">Voltar à Página Principal</a>
