--- a/SeaWorld.html
+++ b/SeaWorld.html
@@ -205,7 +205,7 @@
                     <p class="lead"></p>
                 </div>
                 <div class="col-md-5">
-                    <img src="img/seaworld.JPG" alt="Orlando" />
+                    <img src="img/seaworld.jpg" alt="SeaWorld" />
                 </div>
             </div>
             <a href="index.html">Voltar à Página Principal</a>
