--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
                       </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Universal_CarroSel.jpg" />
+                    <img src="img/Universal_Carrosel.JPG" />
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Déa Bento Turismo</h1>
                         <p style="color: black;">Agência de Viagens Parceira da Magic Blue Turismo</p>
                       </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Orlando_CarroSel.jpg" />
+                    <img src="img/Orlando_Carrosel.JPG" />
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Déa Bento Turismo</h1>
                         <p>Agência de Viagens Parceira da Magic Blue Turismo</p>
@@ -217,21 +217,21 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="img/novo/Disney_redondo.jpg" width="200" class="bd-placeholder-img rounded-circle" />
+                    <img src="img/Novo/Disney_Redondo.jpg" width="200" class="bd-placeholder-img rounded-circle" />
                     <h2 class="fw-normal">Disney</h2>
                     <p>Venha conhecer os parques da Disney</p>
                     <p><a class="btn btn-secondary" href="Disney.html">+ detalhes &raquo;</a></p>
                 </div>
                 <!--/.col-lg-4-->
                 <div class="col-lg-4">
-                    <img src="img/novo/Universal_redondo.jpg" width="200" class="bd-placeholder-img rounded-circle" />
+                    <img src="img/Novo/Universal_redondo.jpg" width="200" class="bd-placeholder-img rounded-circle" />
                     <h2 class="fw-normal">Universal</h2>
                     <p>Venha conhecer os parques da Universal</p>
                     <p><a class="btn btn-secondary" href="Universal.html">+ detalhes &raquo;</a></p>
                 </div>
                 <!--/.col-lg-4-->
                 <div class="col-lg-4">
-                    <img src="img/novo/Sea_World.jpg" width="200" class="bd-placeholder-img rounded-circle" />
+                    <img src="img/Novo/Sea_World.jpg" width="200" class="bd-placeholder-img rounded-circle" />
                     <h2 class="fw-normal">Sea World</h2>
                     <p>Venha conhecer os parques da Sea World</p>
                     <p><a class="btn btn-secondary" href="SeaWorld.html">+ detalhes &raquo;</a></p>
@@ -254,7 +254,7 @@
 
                 </div>
                 <div class="col-md-5">
-                    <img src="img/novo/orlando.jpg" alt="Orlando" />
+                    <img src="img/Novo/Orlando.jpg" alt="Orlando" />
                 </div>
             </div>
 
@@ -269,7 +269,7 @@
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="img/novo/cruzeiro.jpg" alt="Cruzeiro Disney" />
+                    <img src="img/Novo/Cruzeiro.jpg" alt="Cruzeiro Disney" />
                 </div>
             </div>
             <hr class="featurette-divider">
@@ -285,7 +285,7 @@
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5">
-                    <img src="img/novo/california.jpg" alt="Califórnia" />
+                    <img src="img/Novo/California.jpg" alt="Califórnia" />
                 </div>
             </div>
 
@@ -300,7 +300,7 @@
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="img/novo/universal.jpg" alt="Universal" />
+                    <img src="img/Novo/Universal.jpg" alt="Universal" />
                 </div>
             </div>
 
@@ -315,7 +315,7 @@
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5">
-                    <img src="img/novo/Dubai_Abu_dhabi_Jan_2024.jpg" alt="Dubai e Abu Dhabi Janeiro 2024" />
+                    <img src="img/Novo/Dubai_Abu_dhabi_Jan_2024.jpg" alt="Dubai e Abu Dhabi Janeiro 2024" />
                 </div>
             </div>
 
@@ -331,7 +331,7 @@
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="img/novo/seguro.jpg" alt="Seguro viajem" />
+                    <img src="img/Novo/Seguro.jpg" alt="Seguro viajem" />
                 </div>
             </div>
 
