alteração no texto sobre

--- a/Sobre.html
+++ b/Sobre.html
@@ -186,9 +186,9 @@
                     <h2 >
                         Sobre
                     </h2>
-                    <p class="card-text">Meu nome é Andréa Bento, tenho 46 anos. Nasci em Brasília mas moro em Niterói, Rj. Sou casada e tenho 2 filhas.
-                        <p>Sou advogada desde 2004 porém em 2013 descobri com carcinoma na qual fiquei impossibilitada de trabalhar durante um tempo.</p>
-                        <p>Em 2017 ganhei uma viagem para Orlando e então me encantei com o turismo. Quando voltei fiz curso de Guia de Turismo e Agente de Viagens. Após o término do curso a agência que fiz os cursos (Magic Blue Turismo) me convidou para ser parceira na venda de ingressos.</p>
+                    <p class="card-text">Meu nome é Andréa Bento, tenho 46 anos. Nasci em Brasília mas moro em Niterói, RJ. Sou casada e tenho 2 filhas.
+                        <p>Sou advogada desde 2004, porém em 2013 descobri um carcinoma que me deixou impossibilitada de trabalhar durante um tempo.</p>
+                        <p>Em 2017 ganhei uma viagem para Orlando e então me encantei com o turismo. Quando voltei fiz curso de Guia de Turismo e Agente de Viagens. Após o término do curso a agência (Magic Blue Turismo) me convidou para ser parceira na venda de ingressos.</p>
                         <p>Assim que abriram as inscrições para o Elas na Tech meu marido me incentivou a fazer a inscrição, o curso está sendo bastante enriquecedor! Amei conhecer toda turma. Sou muito grata por esse curso!</p>
                         <p>Meu objetivo é colocar logo tudo que aprendi em prática e continuar aprendendo cada vez mais!</p>
  
