coloquei ícone, mudei legenda dos produtos

--- a/Disney.html
+++ b/Disney.html
@@ -13,10 +13,10 @@
     <meta name="description" content="Projeto Final Elas na Tech">
     <meta name="author" content="Andréa Bento">
     <meta name="keywords" content="html, css, javascript">
+    
+    <link rel="icon" type="imagem/png" href="img/favicon_io/android-chrome-512x512.png">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
-
-
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
