--- a/Produtos.html
+++ b/Produtos.html
@@ -12,6 +12,8 @@
 
     <title>Produtos</title>
 
+    <link rel="icon" type="imagem/png" href="img/favicon_io/android-chrome-512x512.png">
+
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -319,7 +321,7 @@
                                 <img class="bd-placeholder-img card-img-top" height="225" src="img/produto/NtalDisney.jpeg" />
 
                                 <div class="card-body">
-                                    <p class="card-text">INGRESSO MICKEY'S VERY MERRY CHRISTMAS PARTY</p>
+                                    <p class="card-text">Ingresso Mickey's Very Merry Christmas Party</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Comprar</button>
@@ -338,7 +340,7 @@
                                 <img class="bd-placeholder-img card-img-top" height="225" src="img/produto/DiscoveryCove.jpeg" />
 
                                 <div class="card-body">
-                                    <p class="card-text">INGRESSO DISCOVERY COVE DAY RESORT PACKAGE (+ SEA WORLD + AQUATICA) 2024</p>
+                                    <p class="card-text">Ingresso Discovery Cove Day Resort Package (+ Sea World + Aquatica) 2024</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Comprar</button>
@@ -376,7 +378,7 @@
                                 <img class="bd-placeholder-img card-img-top" height="225" src="img/produto/universal2.JPG" />
 
                                 <div class="card-body">
-                                    <p class="card-text">INGRESSO UNIVERSAL 3 PARK EXPLORE 2023 + HALLOWEEN HORROR NIGHTS</p>
+                                    <p class="card-text">Ingresso Universal 3 Park Explore 2023 + Halloween Horror Nights</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Comprar</button>
@@ -395,7 +397,7 @@
                                 <img class="bd-placeholder-img card-img-top" height="225" src="img/Universal.JPG" />
 
                                 <div class="card-body">
-                                    <p class="card-text">INGRESSO UNIVERSAL 3 PARK 3 DIAS PARK TO PARK FLEXIVEL</p>
+                                    <p class="card-text">Ingresso Universal 3 PARK 3 dias Park To Park Flexivel</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">Comprar</button>
