--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="assets/js/color-modes.js"></script>
 
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/"> -->
-
+    <link rel="icon" type="imagem/png" href="img/favicon_io/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -96,7 +96,6 @@
                 display: block !important;
             }
     </style>
-
 
     <!-- Custom styles for this template -->
     <link href="css/carousel.css" rel="stylesheet">
@@ -261,14 +260,14 @@
             <hr class="featurette-divider">
 
             <div class="row featurette">
-                <div class="col-md-7 order-md-2">
+                <div class="col-md-5 order-md-2">
                     <h2 class="featurette-heading fw-normal lh-1">
                         Cruzeiros Disney
                     </h2>
                     <p class="lead">Ganhe o pacote de fotos profissionais para guardar os melhores momentos dessa magia a bordo</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
-                <div class="col-md-5 order-md-1">
+                <div class="col-md-7 order-md-1">
                     <img src="img/Novo/Cruzeiro.jpg" alt="Cruzeiro Disney" />
                 </div>
             </div>
@@ -292,14 +291,14 @@
             <hr class="featurette-divider">
 
             <div class="row featurette">
-                <div class="col-md-7 order-md-2">
+                <div class="col-md-5 order-md-2">
                     <h2 class="featurette-heading fw-normal lh-1">
                         Universal
                     </h2>
                     <p class="lead">Mistério, magia e muita diversão</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
-                <div class="col-md-5 order-md-1">
+                <div class="col-md-7 order-md-1">
                     <img src="img/Novo/Universal.jpg" alt="Universal" />
                 </div>
             </div>
@@ -323,14 +322,14 @@
             <hr class="featurette-divider">
 
             <div class="row featurette">
-                <div class="col-md-7 order-md-2 top-0">
+                <div class="col-md-5 order-md-2 top-0">
                     <h2 class="featurette-heading fw-normal lh-1 ">
                         Seguro Viajem
                     </h2>
                     <p class="lead">Ganha 10% OFF no seu seguro viajem internacional e embarque em uma aventura com mais tranquilidade</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
-                <div class="col-md-5 order-md-1">
+                <div class="col-md-7 order-md-1">
                     <img src="img/Novo/Seguro.jpg" alt="Seguro viajem" />
                 </div>
             </div>
