--- a/Faleconosco.html
+++ b/Faleconosco.html
@@ -14,9 +14,9 @@
     <meta name="author" content="Andréa Bento">
     <meta name="keywords" content="html, css, javascript">
 
+    <link rel="icon" type="imagem/png" href="img/favicon_io/android-chrome-512x512.png">
+
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
-
-
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
