--- a/Universal.html
+++ b/Universal.html
@@ -16,7 +16,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
 
-
+    <link rel="icon" type="imagem/png" href="img/favicon_io/android-chrome-512x512.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
