mudança nas legendas

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <h2 class="featurette-heading fw-normal lh-1">
                         Cruzeiros Disney
                     </h2>
-                    <p class="lead">Ganhe o pacote de fotos profissionais para guardar os melhores momentos dessa magia a bordo</p>
+                    <p class="lead">Ganhe o pacote de fotos profissionais para guardar os melhores momentos dessa magia a bordo.</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-7 order-md-1">
@@ -280,7 +280,7 @@
                     </h2>
                     <h4>Los Angeles | San Francisco | Anaheim</h4>
 
-                    <p class="lead">Embarque com a gente nesta aventura pela costa oeste dos Estados Unidos</p>
+                    <p class="lead">Embarque com a gente nesta aventura pela costa oeste dos Estados Unidos.</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5">
@@ -295,7 +295,7 @@
                     <h2 class="featurette-heading fw-normal lh-1">
                         Universal
                     </h2>
-                    <p class="lead">Mistério, magia e muita diversão</p>
+                    <p class="lead">Prepare-se para a aventura de uma vida quando visitar os três parques do Universal Orlando Resort.</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-7 order-md-1">
@@ -310,7 +310,7 @@
                     <h2 class="featurette-heading fw-normal lh-1">
                         Dubai e Abu Dhabi Janeiro 2024
                     </h2>
-                    <p class="lead">Mistério, magia e muita diversão</p>
+                    <p class="lead">Venha conhecer o deserto: Mistério, magia e muita diversão!</p>
                     <a href="Produtos.html" class="btn btn-lg btn-primary">+ Detalhes</a>
                 </div>
                 <div class="col-md-5">
